--- a/src/powershell-win-core/powershell-win-core.csproj
+++ b/src/powershell-win-core/powershell-win-core.csproj
@@ -36,7 +36,7 @@
   <ItemGroup>
     <PackageReference Include="PSDesiredStateConfiguration" Version="1.0.0-alpha01" />
     <PackageReference Include="PowerShellHelpFiles" Version="1.0.0-alpha01" />
-    <PackageReference Include="psrp.windows" Version="6.0.0-beta.2" />
+    <PackageReference Include="psrp.windows" Version="6.0.0-*" />
   </ItemGroup>
 
   <PropertyGroup>
