--- a/src/powershell-unix/powershell-unix.csproj
+++ b/src/powershell-unix/powershell-unix.csproj
@@ -30,7 +30,7 @@
   <ItemGroup>
     <PackageReference Include="libpsl" Version="6.0.0-*" />
     <PackageReference Include="psrp" Version="1.1.0-*" />
-    <PackageReference Include="PSDesiredStateConfiguration" Version="1.0.0-alpha01" />
+    <PackageReference Include="PSDesiredStateConfiguration" Version="6.0.0-beta.8" />
     <PackageReference Include="PowerShellHelpFiles" Version="1.0.0-alpha01" />
   </ItemGroup>
 
