Added documentation and small bug fixes

--- a/src/Microsoft.PowerShell.MarkdownRender/Microsoft.PowerShell.MarkdownRender.csproj
+++ b/src/Microsoft.PowerShell.MarkdownRender/Microsoft.PowerShell.MarkdownRender.csproj
@@ -23,6 +23,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+  <!-- Source: https://github.com/lunet-io/markdig/ -->
     <PackageReference Include="Markdig.Signed" Version="0.14.9" />
   </ItemGroup>
 
