--- a/.vsts-ci/windows-daily.yml
+++ b/.vsts-ci/windows-daily.yml
@@ -78,3 +78,13 @@ stages:
   # Unlike daily builds, we do not upload nuget package to MyGet so we do not wait on tests to finish.
   - template: templates/windows-packaging.yml
 
+- stage: PerfTest
+  displayName: Performance tests
+  jobs:
+  - template: templates/perftest.yml
+    parameters:
+      imageName: 'vs2017-win2016'
+      jobName: 'winPerf'
+      displayName: 'Performance Test Windows Server 2016'
+
+
