--- a/.vsts-ci/mac.yml
+++ b/.vsts-ci/mac.yml
@@ -89,3 +89,9 @@ jobs:
       Import-Module .\tools\ci.psm1
       New-CodeCoverageAndTestPackage
     displayName: CodeCoverage and Test Package
+
+- template: templates/perftest.yml
+  parameters:
+    imageName: 'macOS-10.14'
+    jobName: 'macOSPerf'
+    displayName: 'Performance Test macOS 10.14'
