--- a/test/performance/azDevOps/PerformanceTest.yml
+++ b/test/performance/azDevOps/PerformanceTest.yml
@@ -1,6 +1,7 @@
 stages:
 - stage: WinPerfTest
   displayName: Performance tests
+  dependsOn: []
   jobs:
   - template: templates/run-perftest.yml
     parameters:
@@ -10,6 +11,7 @@ stages:
 
 - stage: LinuxPerfTest
   displayName: Performance tests
+  dependsOn: []
   jobs:
   - template: templates/run-perftest.yml
     parameters:
@@ -19,6 +21,7 @@ stages:
 
 - stage: MacOSPerfTest
   displayName: Performance tests
+  dependsOn: []
   jobs:
   - template: templates/run-perftest.yml
     parameters:
