--- a/test/performance/azDevOps/PerformanceTest.yml
+++ b/test/performance/azDevOps/PerformanceTest.yml
@@ -7,7 +7,7 @@ stages:
     parameters:
       imageName: 'vs2017-win2016'
       jobName: 'winPerf'
-      displayName: 'Performance Test Windows Server 2016'
+      displayName: 'Windows Server 2016'
 
 - stage: LinuxPerfTest
   displayName: Performance tests
@@ -17,7 +17,7 @@ stages:
     parameters:
       imageName: 'ubuntu-16.04'
       jobName: 'linuxPerf'
-      displayName: 'Performance Test Ubuntu 16.04'
+      displayName: 'Ubuntu 16.04'
 
 - stage: MacOSPerfTest
   displayName: Performance tests
@@ -27,4 +27,4 @@ stages:
     parameters:
       imageName: 'macOS-10.14'
       jobName: 'macOSPerf'
-      displayName: 'Performance Test macOS 10.14'
+      displayName: 'macOS 10.14'
