Add schedule for every 3 hours

--- a/test/performance/azDevOps/PerformanceTest.yml
+++ b/test/performance/azDevOps/PerformanceTest.yml
@@ -1,3 +1,7 @@
+schedules:
+  - cron: "0 */3 * * *"
+    displayName: Every 3 hours
+
 stages:
 - stage: WinPerfTest
   displayName: Performance tests
