--- a/test/performance/azDevOps/PerformanceTest.yml
+++ b/test/performance/azDevOps/PerformanceTest.yml
@@ -2,7 +2,8 @@ schedules:
   - cron: "5 */3 * * *"
     displayName: Every 3 hours
     branches:
-      include: master
+      include:
+      - master
 
 stages:
 - stage: WinPerfTest
