--- a/test/performance/azDevOps/PerformanceTest.yml
+++ b/test/performance/azDevOps/PerformanceTest.yml
@@ -1,9 +1,9 @@
 schedules:
-  - cron: "5 */3 * * *"
+  - cron: "10 */3 * * *"
     displayName: Every 3 hours
     branches:
       include:
-      - master
+      - AppInsightsPerf
 
 stages:
 - stage: WinPerfTest
