--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,9 @@ pool:
   container: 'mcr.microsoft.com/powershell/test-deps:preview-alpine-3.8'
 
 steps:
+- pwsh: Get-ChildItem 'Env:'
+  displayName: Capture environment
+  
 - pwsh: | 
     Import-Module '$(Build.SourcesDirectory)/build.psm1' -Force
     Start-PSBootstrap
