--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 pool:
   vmImage: 'ubuntu-16.04'
 
-container: 'arpatwar/testalpinegclib'
+container: 'arpatwar/testalpinegclib:latest'
 
 steps:
 - pwsh: Get-ChildItem 'Env:'
