--- a/src/Microsoft.PowerShell.Commands.Utility/Microsoft.PowerShell.Commands.Utility.csproj
+++ b/src/Microsoft.PowerShell.Commands.Utility/Microsoft.PowerShell.Commands.Utility.csproj
@@ -32,8 +32,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.7.0" />
-    <PackageReference Include="System.Threading.AccessControl" Version="5.0.0-preview.7.20364.11" />
-    <PackageReference Include="System.Drawing.Common" Version="5.0.0-preview.7.20364.11" />
+    <PackageReference Include="System.Threading.AccessControl" Version="5.0.0-rc.1.20417.4" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0-rc.1.20417.4" />
     <PackageReference Include="NJsonSchema" Version="10.1.24" />
   </ItemGroup>
 
