--- a/test/tools/TestService/TestService.csproj
+++ b/test/tools/TestService/TestService.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.0-preview.7.20364.11" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.0-rc.1.20417.4" />
   </ItemGroup>
 
 </Project>
